--- a/estilo.css
+++ b/estilo.css
@@ -1,14 +1,40 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300');
 
+@import url('https://fonts.googleapis.com/css?family=Pacifico&subset=latin-ext');
+
+
 body {
-  color:#37474f;
+  color:rgb(100,100,100);
+  /*
+
+  color:#FFFFFF;
+  color:rgb(255,255,255 
+  significa
+  FF = 255 R
+  00 = 0G
+  00 = 
+  */
   padding:0; 
   margin:0; 
   margin-bottom:5rem; 
-  font-family: Helvetica, Arial, sans-serif; 
+  font-family: 'Pacifico', cursive;
   background:#e2f1f8;
   line-height: 1.75;
 }
+
+
+@media screen and (orientation:portrait){
+  body{
+    font-family: 'Times new roman', Times, serif;
+    background:black;
+    /*cambiamos el color cuando es tamaño normar y portrait*/
+    color:white ;
+  }
+}
+
+
+
+
 
 a{
   color:#222;
